# BeliefRL-Grid

./: README.md  model_training.py  pyproject.toml  requirements.txt  setup.py  test.py
Models/ToMPacMan/: ppo_checkpoint.pth
pac_man/: agent.py  ghost.py  main.py  pac_gym.py  ppo.py  screen.py  vdo.py
